--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -17,6 +17,6 @@
 .nav--title {
     font-family: "Raleway", sans-serif;
     color: rgb(99, 128, 184);
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-left: 10px;
 }
