--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -16,7 +16,7 @@
 
 .nav--title {
     font-family: "Raleway", sans-serif;
-    color: rgb(99, 128, 184);
+    color: #FAF9F6;
     font-size: 1.25rem;
     margin-left: 10px;
 }
