--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -16,7 +16,7 @@
 
 .nav--title {
     font-family: "Raleway", sans-serif;
-    color: #FAF9F6;
+    color: #7f8fc1;
     font-size: 1.75rem;
     margin-left: 10px;
 }
