--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -2,6 +2,7 @@
     display: flex;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #FAF9F6;
+    margin-top: 50px;
 }
 
 .article-image-container {
