--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -57,5 +57,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;  
+    text-overflow: ellipsis;
     overflow: hidden;
 }
